# espTari

./: .gitignore  AGENT_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LICENSE  README.md  bootstrap_prompt.txt  daily_prompt.txt  espTari.goals  partitions.csv  sdkconfig.defaults
TRACKING/: ACCEPTANCE_LOG.md  AGENT_RUNBOOK.md  ARCHITECTURE_90_CLOSURE_CHECKLIST.md  BACKLOG.md  CONTRACT_TO_RUNTIME_VERIFICATION_TASKS.md  CRT_HANDOFF_S5_SUMMARY.md  EPICS.md  KANBAN_BOARD.md  MVP_DEFINITION.md  README.md  RELEASE_NOTES.md  S5_RUNTIME_UNLOCK_EXECUTION_PLAN.md  SPRINT_00_FOUNDATIONS.md  SPRINT_01_VERTICAL_SLICE.md  SPRINT_02_ST_CORE_RUNTIME.md  SPRINT_03_INPUT_CATALOG_SYNC.md  SPRINT_04_OBSERVABILITY_CONFORMANCE.md  TASK_CARDS_CRT_001_CRT_005.md  TASK_CARDS_S5_UNLOCK_PREREQS.md  TASK_CARDS_T054_T121.md  WORKING_AGREEMENT.md
TRACKING/CRT_READINESS/: CRT-001_READINESS.md  CRT-002_READINESS.md  CRT-003_READINESS.md  CRT-004_READINESS.md  CRT-005_READINESS.md
TRACKING/PRQ_WORKING/: PRQ-001_DOMAIN_CLOSURE_MATRIX.md  PRQ-001_GAP_REGISTER.md  PRQ-001_REVIEW_PACKET.md  PRQ-002_FIXTURE_SCENARIO_PACKAGE.md  PRQ-003_DEPLOYMENT_WORKFLOW_RUNBOOK.md  PRQ-004_UNLOCK_REVIEW_PACKET.md
assets/emulator/: floppy_catalog.json  roms_catalog.json  scrape_floppies.py  scrape_roms.py  scrape_tos.py  tos_catalog.json
components/esptari_audio/: CMakeLists.txt
components/esptari_core/: CMakeLists.txt
components/esptari_core/include/: esptari_core.h
components/esptari_core/src/: esptari_core.c
components/esptari_input/: CMakeLists.txt
components/esptari_loader/: CMakeLists.txt  idf_component.yml
components/esptari_loader/include/: component_api.h  ebin_format.h  esptari_loader.h  machine.h
components/esptari_loader/src/: ebin_parser.c  loader.c  machine_config.c  registry.c  relocator.c  unified_profile.c
components/esptari_loader/test/: CMakeLists.txt  test_ebin_parser.c  test_registry.c  test_relocator.c
components/esptari_memory/: CMakeLists.txt
components/esptari_network/: CMakeLists.txt  esptari_network.c  esptari_yaml.c  idf_component.yml
components/esptari_storage/: CMakeLists.txt
components/esptari_stream/: CMakeLists.txt
components/esptari_video/: CMakeLists.txt
components/esptari_web/: CMakeLists.txt
docs/: EMU_ENGINE_V2_API_SPEC.md  EMU_ENGINE_V2_IMPLEMENTATION_PLAN.md
docs/emu_engine_v2/: 01_executive_summary.md  02_system_block_diagram.md  03_component_spec_table.md  04_memory_io_map.md  05_timing.md  06_storage_media.md  07_input_peripherals.md  08_rom_tos.md  09_compatibility_risk_matrix.md  10_validation_plan.md  ATARI_ST_CYCLE_ACCURATE_HARDWARE_SPEC.md  README.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
spiffs/: network.yaml
test_apps/esptari_loader/main/: CMakeLists.txt  test_runner.c
tools/: prep_sdcard.sh  prep_sdcard_prod.sh
(+106 files in other folders)
